<resources xmlns:tools="http://schemas.android.com/tools">
  <string name="app_name">MyOutLet</string>
  <string name="txt_Top">JUST BASIC OUTLET</string>
  <string name="txt_Down">Find your clothes and accessories near you</string>
  <string name="btn_Singin">LOGIN</string>
  <string name="btn_Register">REGISTER</string>
  <string name="app_NameTop">BASICS</string>
  <string name="app_NameDown">OUTLET</string>
  <string name="app_MainOne">CATEGORIES</string>
  <string name="title_activity_focus_cate">FocusCateActivity</string>

  <string name="next">Next</string>
  <string name="previous">Previous</string>


  <string name="title_number1">Ribbed polo-Neck Jumper</string>
  <string name="title_number2"><![CDATA[Jack & James]]></string>
  <string name="description_product">Description</string>
  <string name="preco_prod">Price</string>
  <string name="nameprod">Name Product</string>
  <string name="collections">COLLECTIONS</string>
  <string name="description_card">Description Card</string>
  <string name="description">DESCRIPTION</string>

  <string name="return_url_scheme" translatable="false">mt-klarna</string>
  <string name="return_url_host" translatable="false">mt</string>

  <string name="clientToken_klarna" tools:ignore="MissingTranslation">eyJhbGciOiJSUzI1NiIsImtpZCI6IjgyMzA1ZWJjLWI4MTEtMzYzNy1hYTRjLTY2ZWNhMTg3NGYzZCJ9.eyJzZXNzaW9uX2lkIjoiOGNiN2M2ZmEtNTgwNS00ZGFjLWFlYWYtZDM0ODFhYzM2ZGVmIiwiYmFzZV91cmwiOiJodHRwczovL2pzLnBsYXlncm91bmQua2xhcm5hLmNvbS9uYS9rcCIsImRlc2lnbiI6ImtsYXJuYSIsImxhbmd1YWdlIjoiZW4iLCJwdXJjaGFzZV9jb3VudHJ5IjoiVVMiLCJlbnZpcm9ubWVudCI6InBsYXlncm91bmQiLCJtZXJjaGFudF9uYW1lIjoiWW91ciBidXNpbmVzcyBuYW1lIiwic2Vzc2lvbl90eXBlIjoiUEFZTUVOVFMiLCJjbGllbnRfZXZlbnRfYmFzZV91cmwiOiJodHRwczovL25hLnBsYXlncm91bmQua2xhcm5hZXZ0LmNvbSIsInNjaGVtZSI6dHJ1ZSwiZXhwZXJpbWVudHMiOlt7Im5hbWUiOiJrcC1jbGllbnQtdXRvcGlhLXN0YXRpYy13aWRnZXQiLCJ2YXJpYXRlIjoiaW5kZXgiLCJwYXJhbWV0ZXJzIjp7ImR5bmFtaWMiOiJ0cnVlIn19LHsibmFtZSI6ImtwLWNsaWVudC11dG9waWEtZmxvdyIsInZhcmlhdGUiOiJ2YXJpYXRlLTEifSx7Im5hbWUiOiJrcC1jbGllbnQtb25lLXB1cmNoYXNlLWZsb3ciLCJ2YXJpYXRlIjoidmFyaWF0ZS0xIn0seyJuYW1lIjoiaW4tYXBwLXNkay1uZXctaW50ZXJuYWwtYnJvd3NlciIsInZhcmlhdGUiOiJuZXctaW50ZXJuYWwtYnJvd3Nlci1lbmFibGUiLCJwYXJhbWV0ZXJzIjp7InZhcmlhdGVfaWQiOiJuZXctaW50ZXJuYWwtYnJvd3Nlci1lbmFibGUifX0seyJuYW1lIjoia3AtY2xpZW50LXV0b3BpYS1zZGstZmxvdyIsInZhcmlhdGUiOiJ2YXJpYXRlLTEifSx7Im5hbWUiOiJrcC1jbGllbnQtdXRvcGlhLXdlYnZpZXctZmxvdyIsInZhcmlhdGUiOiJ2YXJpYXRlLTEifSx7Im5hbWUiOiJpbi1hcHAtc2RrLWNhcmQtc2Nhbm5pbmciLCJ2YXJpYXRlIjoiY2FyZC1zY2FubmluZy1lbmFibGUiLCJwYXJhbWV0ZXJzIjp7InZhcmlhdGVfaWQiOiJjYXJkLXNjYW5uaW5nLWVuYWJsZSJ9fV0sInJlZ2lvbiI6InVzIiwib3JkZXJfYW1vdW50IjoyMDAwMCwib2ZmZXJpbmdfb3B0cyI6Miwib28iOiI3ZyJ9.Ig0n0N4Yq_6vXyO5KGGLgY_1-Bt-1UsmvtV83mm32ow9hHx4YXKxBAwP5W773Be1jfFP9zE_qA2IYqW-Y_Yx6CSvwRrCRfee6Z81aD6yS529PF-0DgVFZIq4inxMV8ny1MzVk6uxtopxVazpXc9RoNFL0pw5cwXLAo_pzbqk4M32o9jbpPaWLyRE7RRM_KqjfeoNuVjrOLFlSBmKl4v-LZUyuQhcqN3LtCW-GinwDEsQ7ilzN6RXPdFdmDPyV35eMpjcTo0gIzzp_yh7YI-R7Dgv1p39CDot3H1B_mXA3D9lb_6Ak44AggnLsy_VD7RgEZ3LHsneC1nslCJAe729hA</string>
</resources>