<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent">


  <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">
      <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="500dp">

        <ImageView
            android:id="@+id/img_prod"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/img_girl" />
      </RelativeLayout>
      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="110dp">

        <TextView
          android:id="@+id/txt_prod_name"
          android:layout_width="230dp"
          android:layout_height="match_parent"
          android:gravity="center"
          android:text="@string/nameprod"
          android:textSize="18dp"
          android:textColor="@color/black"
          android:fontFamily="sans-serif"
          android:textFontWeight="600"/>
        <TextView
          android:id="@+id/txt_prod_price"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:gravity="center"
          android:text="@string/preco_prod"
          android:textSize="20dp"
          android:fontFamily="sans-serif"
          android:textColor="@color/black"
          android:textFontWeight="600"/>

      </LinearLayout>
      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginLeft="15dp"
          android:text="@string/description"
          android:fontFamily="sans-serif"
          android:textFontWeight="800"
          android:textColor="@color/black"/>
        <TextView
          android:id="@+id/txt_prod_descricao"
          android:layout_width="match_parent"
          android:layout_height="100dp"
          android:layout_marginTop="17dp"
          android:layout_marginLeft="17dp"
          android:layout_marginRight="17dp"
          android:layout_marginBottom="10dp"
          android:text="@string/description_product"
          android:fontFamily="sans-serif"
          android:textSize="16sp"
          android:textFontWeight="400"
          android:textColor="@color/black"/>
        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:gravity="center"
          android:layout_marginBottom="10dp">
          <Button
            android:id="@+id/btn_favo"
            android:layout_width="170dp"
            android:layout_height="55dp"
            android:layout_marginRight="20dp"
            android:text="FAVORITES"
            android:fontFamily="sans-serif"
            android:textColor="@color/white"
            android:backgroundTint="@color/black"/>
          <Button
            android:id="@+id/btn_search"
            android:layout_width="170dp"
            android:layout_height="55dp"
            android:fontFamily="sans-serif"
            android:text="SEARCH FOR"
            android:textColor="@color/white"
            android:backgroundTint="@color/black"/>

        </LinearLayout>
      </LinearLayout>
    </LinearLayout>
  </ScrollView>
</LinearLayout>